# pandas_quick_table_rereading

./: .gitignore  README.md  SampleData.xlsx  pyproject.toml  quick_table_rereading.py  read_excel_or_pkl.py  read_file_or_pkl.py  test.py
src/pandas_quick_table_rereading/: quick_table_rereading.py
src/pqtrr/: __init__.py  table_reading.py
tests/: test.py
